force-app/main/default/objects/Import__c/Import__c.object-meta.xml
<CustomObject>
    <description>Used for imports requiring a batch job due to the size of the file to be imported and the downstream processes. This is to prevent dml and cpu errors</description>
    <label>Import</label>
    <nameField>
        <displayFormat>im-{00000}</displayFormat>
        <label>Import ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>