force-app/main/default/objects/Import__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>related case</description>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Imports</relationshipLabel>
    <relationshipName>Imports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>