force-app/main/default/objects/Import__c/fields/Deductions_Medicare__c.field-meta.xml
<CustomField>
    <fullName>Deductions_Medicare__c</fullName>
    <label>Deductions: Medicare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>