force-app/main/default/objects/Import__c/fields/Deductions_Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Deductions_Social_Security__c</fullName>
    <label>Deductions: Social Security</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>