force-app/main/default/objects/Import__c/fields/Deductions_State_Withholding__c.field-meta.xml
<CustomField>
    <fullName>Deductions_State_Withholding__c</fullName>
    <label>Deductions: State Withholding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>