force-app/main/default/objects/Import__c/fields/Employee_City__c.field-meta.xml
<CustomField>
    <fullName>Employee_City__c</fullName>
    <label>Employee City</label>
    <length>120</length>
    <type>Text</type>
</CustomField>