force-app/main/default/objects/Import__c/fields/Employee_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Last_Name__c</fullName>
    <label>Employee Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>