force-app/main/default/objects/Import__c/fields/Employee_State__c.field-meta.xml
<CustomField>
    <fullName>Employee_State__c</fullName>
    <label>Employee State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>