force-app/main/default/objects/Import__c/fields/Employee_Street__c.field-meta.xml
<CustomField>
    <fullName>Employee_Street__c</fullName>
    <label>Employee Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>