force-app/main/default/objects/Import__c/fields/Employee_Zip__c.field-meta.xml
<CustomField>
    <fullName>Employee_Zip__c</fullName>
    <label>Employee Zip</label>
    <length>12</length>
    <type>Text</type>
</CustomField>