force-app/main/default/objects/Import__c/fields/Factor__c.field-meta.xml
<CustomField>
    <fullName>Factor__c</fullName>
    <label>Factor</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>