force-app/main/default/objects/Import__c/fields/Net_Wages_Paid__c.field-meta.xml
<CustomField>
    <fullName>Net_Wages_Paid__c</fullName>
    <label>Net Wages Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>