force-app/main/default/objects/Import__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>"Deletable"</defaultValue>
    <description>Used solely by the PurgeRecords classes to delete these Import__c records.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deletable</fullName>
                <default>true</default>
                <label>Deletable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>