force-app/main/default/objects/Import__c/recordTypes/form40.recordType-meta.xml
<RecordType>
    <fullName>form40</fullName>
    <active>true</active>
    <description>for BOFE form 40 imports</description>
    <label>form40</label>
</RecordType>